# aliyun-rs

./: Cargo.toml  README.md
src/: auth.rs  common.rs  dysmsapi.rs  ecs.rs  fc.rs  from_body.rs  into_body.rs  lib.rs  ocr.rs  ocr_api.rs  open_object.rs  oss.rs  query_value.rs  sample.rs  serializes.rs  sms.rs  tests.rs  v3.rs
src/auth/: acs3.rs  oss4.rs
src/tests/: ecs.rs  fc.rs  oss.rs  sms.rs
tests/: ecs.rs  fc.rs  oss.rs  sms.rs
