[package]
name = "aliyun-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
derive_setters = "0.1.8"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
reqwest = { version = "0.12.26" }
serde = "1.0.228"
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tracing = "0.1.43"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
time = { version = "0.3.44", features = ["macros"] }
