[package]
name = "ali-acs"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A type-safe, idiomatic Rust SDK for Alibaba Cloud services with complete protocol coverage"
repository = "https://github.com/redforks/aliyun-rs"
readme = "README.md"
keywords = ["aliyun", "ali", "cloud", "sdk", "api"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
anyhow = "1.0.100"
derive_setters = "0.1.8"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
reqwest = { version = "0.12.26" }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = "1.0.228"
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tracing = "0.1.43"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }

[features]
ocr = []
sms = []

[dev-dependencies]
time = { version = "0.3.44", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
